# cv-optimizer

./: .gitignore  PR_DESCRIPTION.md  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt  setup.py
.github/: python-tests.yml
.github/workflows/: python-tests.yml
src/: README.md
src/agents/: README.md  critic_agent.py
src/core/: README.md
src/core/agents/: company_alignment_analyzer.py  experience_analyzer.py  graph_builder.py  search_agents.py
src/core/domain/: agents.py  company_search.py  config.py  constants.py  job_description.py  reasoning.py  resume.py  resume_match.py
src/core/ports/: document_parser.py  privacy_filter.py  privacy_service.py
src/cv_optimizer/: ARCHITECTURE.md  README.md
src/cv_optimizer/agents/: critic_agent.py
src/cv_optimizer/tests/: conftest.py
src/infrastructure/: README.md  components.py
src/infrastructure/agents/: critic_agent.py
src/infrastructure/ai_providers/: anthropic_provider.py  exceptions.py  gemini_provider.py  mock_provider.py  openai_provider.py
src/infrastructure/extractors/: llm_extractor.py
src/infrastructure/matchers/: llm_resume_matcher.py
src/infrastructure/parsers/: base_parser.py  pdf_parser.py
src/infrastructure/privacy/: presidio_privacy_service.py
src/infrastructure/template/: exceptions.py  (+1 more)
src/utils/: README.md
tests/: README.md  conftest.py  test_parser.py
tests/fixtures/: README.md  job_description.py  resumes.py  sample_job_description.txt
tests/template_service/: test_exceptions.py  test_jinja_template_service.py
(+52 files in other folders)
